feat: config check, status page, text backup, duplicate skip, UI tweaks
- Split app into config, source_map, nextcloud, auth, handlers, stats, hash_store
- Config check: show missing .env on landing and admin
- Status page (/status): LINE, Nextcloud, last backup, backups today
- Optional plain-text backup to daily notes.txt (ENABLE_TEXT_BACKUP)
- Skip duplicate uploads by content hash (UPLOADED_HASHES_FILE)
- Session countdown next to logout; remove API from home; add Status link
- Remove source map export/import UI and routes
- Dockerfile: copy new modules; .env.example: new options

Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -25,5 +25,9 @@ SOURCE_STATE_FILE=data/source_state.json
 # GID=1000
 # Optional: max file size in MB (0 = no limit). Larger files are skipped.
 MAX_FILE_SIZE_MB=0
+# Optional: backup plain text (no URL) to daily notes.txt in Nextcloud. true/false.
+# ENABLE_TEXT_BACKUP=false
+# Optional: file to store uploaded hashes for duplicate skip. Empty = disabled.
+# UPLOADED_HASHES_FILE=data/uploaded_hashes.json
 
 ADMIN_PASSWORD=your_admin_password
