Perf and features: aiohttp link title, batch processed IDs, aiohttp health/status, README, admin tip, link title in filename, pytest, login rate limit persist
- link_metadata: use aiohttp for fetch_page_title (non-blocking)
- processed_ids: batch save every 50 adds or 60s to reduce I/O
- main: /health and /status use nextcloud.check_nextcloud_async (aiohttp)
- nextcloud: add link_title param for link filename [Title] link_xxx.txt; add check_nextcloud_async
- README: deployment/secrets section, optional cron /health alert, running tests
- admin: tip about SOURCE_MAP_FILE surviving restart
- tests: pytest for nextcloud, auth, hash_store, processed_ids
- auth: persist login rate limit to LOGIN_RATE_LIMIT_FILE (survives restart)
- config: LOGIN_RATE_LIMIT_FILE; .env.example and Dockerfile updated

Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -29,5 +29,11 @@ MAX_FILE_SIZE_MB=0
 # ENABLE_TEXT_BACKUP=false
 # Optional: file to store uploaded hashes for duplicate skip. Empty = disabled.
 # UPLOADED_HASHES_FILE=data/uploaded_hashes.json
+# Optional: fetch page title for link backup and prepend to content. true/false.
+# ENABLE_LINK_TITLE=true
+# Optional: persist processed webhook message IDs (avoid duplicate after restart). Empty = in-memory only.
+# PROCESSED_IDS_FILE=data/processed_message_ids.json
+# Optional: persist login rate limit state (avoid reset on restart). Empty = in-memory only.
+# LOGIN_RATE_LIMIT_FILE=data/login_rate_limit.json
 
 ADMIN_PASSWORD=your_admin_password
